<resources>
    <string name="app_name">QuizApp</string>
    <string name="my_test_questions">My Test Questions</string>
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="correct_answer">That\'s correct</string>
    <string name="wrong_answer">That\'s wrong</string>
    <string name="question_declaration">just simple</string>

    <string name="question_constitution">The supreme law of the land is the constitution</string>
    <string name="question_amendment">26 amendments</string>
    <string name="question_independence_rights">The two rights in the declaration of independent \n \t <b>You can practice any religion ,or not a religion</b></string>
    <string name="question_government">Journalists is one branch or part of the government.</string>
    <string name="question_government_feds">congress does not make federal laws.</string>
    <string name="question_government_senators">There are one hundred senators</string>
    <string name="next_text">next</string>
    <string name="prev_text">prev_text</string>
    <string name="result_text">result</string>

</resources>