<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
       android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_marginTop="20dp"
       android:padding="8dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer_text_view"
        android:textColor="@color/white"
        android:text="@string/my_test_questions"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp">

        <Button
            android:layout_marginStart="100dp"

            android:id="@+id/true_button"
            android:text="@string/true_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
         android:layout_marginStart="20dp"

            android:id="@+id/false_button"
            android:text="@string/false_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="50dp"
        >
    <ImageButton

        android:contentDescription="@string/prev_text"
        android:layout_marginStart="20dp"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_media_previous"
        android:id="@+id/prev_button"
        android:text="@string/prev_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageButton
        android:contentDescription="@string/next_text"
        android:layout_marginStart="20dp"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_media_next"
        android:id="@+id/next_button"
        android:text="@string/next_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    </LinearLayout>
    <Button
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"

        android:id="@+id/result_button"
        android:text="@string/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>